fix: home-1 about-us-area banner spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5750,6 +5750,7 @@ body.admin-bar .header-menu-area.sticky_menu {
   .banner {
     flex-direction: column;
     align-items: start;
+    margin-top: 34px;
   }
 }
 @media (max-width: 500px) {
