--- a/sass/modules/about-us/_about-us-area.scss
+++ b/sass/modules/about-us/_about-us-area.scss
@@ -297,6 +297,7 @@
     @include rmaxwd(500) {
         flex-direction: column;
         align-items: start;
+        margin-top: 34px;
     }
     .image {
         @include rmaxwd(500){
